--- a/package.json
+++ b/package.json
@@ -12,23 +12,36 @@
   "author": "Cline",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.7",
-    "whatwg-fetch": "^3.6.2",
-    "core-js": "^3.33.0",
+    "@formatjs/intl-displaynames": "^6.6.0",
     "@formatjs/intl-getcanonicallocales": "^2.2.0",
     "@formatjs/intl-locale": "^3.4.0",
-    "@formatjs/intl-displaynames": "^6.6.0",
-    "tiny-sha256": "^1.0.2"
+    "builder-util-runtime": "^9.5.1",
+    "core-js": "^3.33.0",
+    "debug": "^4.4.3",
+    "electron-updater": "^6.1.7",
+    "fs-extra": "^11.2.0",
+    "graceful-fs": "^4.2.11",
+    "js-yaml": "^4.1.1",
+    "jsonfile": "^6.2.0",
+    "lazy-val": "^1.0.5",
+    "lodash.escaperegexp": "^4.1.2",
+    "lodash.isequal": "^4.5.0",
+    "ms": "^2.1.3",
+    "sax": "^1.4.4",
+    "semver": "^7.7.3",
+    "tiny-sha256": "^1.0.2",
+    "universalify": "^2.0.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
+    "concurrently": "^8.2.1",
     "electron": "^28.0.0",
-    "electron-builder": "^24.6.3",
-    "concurrently": "^8.2.1"
+    "electron-builder": "^24.6.3"
   },
   "build": {
     "appId": "com.electron.pompytube",
     "productName": "PompyTube",
+    "asar": true,
     "files": [
       "**/*",
       "node_modules/**/*"
